# katran

./: .cproject  .gitignore  .project  add-vip-port.sh  build_bpf_modules_opensource.sh  build_katran.sh  cfg-server.sh  config-katran-ips.sh  create-ipip-ifs.sh  get-default-route-mac.sh  get-my-card-ip.sh  katran-client  remove-ipip-ifs.sh  run-katran-server.sh  setup-server.sh  xdp_flow_kern.txt
conf/: client-ip.txt  katran-if.txt  server-ips.txt
doc/: Katran-XDP_acceleration_IOVisor.pptx  Katran-XDP_acceleration_Netdev_conf_0x13.pptx
example/: CMakeLists.txt  KatranSimpleServer.cpp
example_grpc/: CMakeLists.txt  katran_server.cpp
katran/lib/: BalancerStructs.h  BpfAdapter.cpp  BpfLoader.cpp  CMakeLists.txt  HwAcceleration.cpp  HwAcceleration.h  KatranLb.cpp  KatranLb.h  KatranLbStructs.h  MacHelpers.cpp  Makefile-bpf  xdproot.cpp
katran/lib/bpf/: balancer_kern.c  balancer_maps.h  balancer_structs.h  handle_icmp.h
katran/lib/testing/: CMakeLists.txt
katran/lib/tests/: CHHelpersTest.cpp  IpHelpersTest.cpp  KatranLbTest.cpp  VipTest.cpp
tools/start_katran/start_katran/src/start_katran/main/: main.go
